--- a/views/index.jade
+++ b/views/index.jade
@@ -25,7 +25,7 @@ block content
 						li
 							span.opener Submenu
 							ul
-								li: a(href='#') Lorem Dolor
+								li: a(href='/login/account') Meu cadastro
 								li: a(href='#') Lorem Dolor
 								li: a(href='#') Lorem Dolor
 								li: a(href='#') Lorem Dolor
