Modificações feitas na autenticação

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,8 +20,9 @@ block content
 						h2 Menu
 					ul
 						li: a(href="/") Homepage
-						li: a(href="/login") Login
-						li: a(href="/users") Users
+						li: a(href="/login/authenticate") Login
+						li: a(href="/login/users") Users
+						li: a(href='/login/account') Cadastro
 						li
 							span.opener Submenu
 							ul
