Feita alterações na autenticação e criação de arquivos pro angular

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,5 +1,7 @@
 
 //script
+script(src='/js/angular.min.js')
+script(src='/js/controllers/mainController.js')
 script(src='/js/jquery.min.js')
 script(src='/js/skel.min.js')
 script(src='/js/util.js')
