--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,6 @@ doctype html
 html
 	head
 		include head
-	body
+	body(ng-app='portfolio', ng-controller='mainController')
 		block content
 		include footer
