criando a autenticaçao gerenciada pelo angular - client side

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -8,3 +8,7 @@ script(src='/js/util.js')
 //if lte IE 8
 	script(src='js/ie/respond.min.js')
 script(src='/js/main.js')
+script(src='/js/services/authenticate.service.js')
+script(src='/js/controllers/homeController.js')
+script(src='/js/controllers/loginController.js')
+script(src='/js/app.js')
