--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,14 +1,20 @@
 
-//script
+//script angular scripts
 script(src='/js/angular.min.js')
-script(src='/js/controllers/mainController.js')
+script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js')
+script(src='//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js')
+script(src='//cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js')
 script(src='/js/jquery.min.js')
+
+//script aplicacao
+script(src='/js/app.js')
+script(src='/js/services/authenticate.service.js')
+script(src='/js/controllers/homeController.js')
+script(src='/js/controllers/loginController.js')
+
+//script template
 script(src='/js/skel.min.js')
 script(src='/js/util.js')
 //if lte IE 8
 	script(src='js/ie/respond.min.js')
 script(src='/js/main.js')
-script(src='/js/services/authenticate.service.js')
-script(src='/js/controllers/homeController.js')
-script(src='/js/controllers/loginController.js')
-script(src='/js/app.js')
