--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
-html
+html(ng-app="portfolio")
 	head
 		include head
-	body(ng-app='portfolio', ng-controller='mainController')
+	body
 		block content
 		include footer
