Alteracoes nos arquivos das controllers do angular

--- a/views/home.jade
+++ b/views/home.jade
@@ -13,6 +13,8 @@ block home
 			li: a(href='#', class='icon fa-snapchat'): span.label Snapchat
 			li: a(href='#', class='icon fa-instagram'): span.label Instagram
 			li: a(href='#', class='icon fa-medium'): span.label Medium	
+
+	div(ng-controller='homeController')
 	section#banner
 		div.content
 			header
