--- a/views/footer.pug
+++ b/views/footer.pug
@@ -7,10 +7,10 @@ script(src='//cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js')
 script(src='/js/jquery.min.js')
 
 //script aplicacao
-script(src='/js/app.js')
-script(src='/js/services/authenticate.service.js')
-script(src='/js/controllers/homeController.js')
-script(src='/js/controllers/loginController.js')
+script(src='/js/angular/app.js')
+script(src='/js/angular/services/authenticate.service.js')
+script(src='/js/angular/controllers/homeController.js')
+script(src='/js/angular/controllers/loginController.js')
 
 //script template
 script(src='/js/skel.min.js')
